# handinhand

./: .gitignore  CLAUDE.md  README.md
csharp-server/: GlobalUsings.cs  Program.cs  README.md  appsettings.Development.json  appsettings.json  csharp-server.csproj
document/: architecture.md
document/diary/: 2025-08-02-wasm-integration-experiment.md
python-server/: README.md  handinhand_server.py  pyproject.toml  requirements-wasm.txt  requirements.txt  run.sh  start.sh  test-config.json  test_calculator_rpc.py  uv.toml
python-server/cmd/: server.py
python-server/src/api/: openrpc_server.py
python-server/src/api/controllers/: calculator_controller.py  user_controller.py
python-server/src/application/user/services/: user_domain_service.py  user_service.py
python-server/src/config/: server_config.py  server_config_schema.py
python-server/src/domain/user/aggregates/: inventory_entity.py  user_aggregates.py  user_aggregates_schema.py
python-server/src/domain/user/entities/: __init__.py  inventory_entity_schema.py  profile_entity.py  profile_entity_schema.py  user_aggregates.py
python-server/src/domain/user/repositories/: redis_user_repository.py  user_repository.py
python-server/src/infrastructure/wasm/: wasm_instance.py
scripts/: generate-models.sh
shared/config/: game-config.json  server-config.json  server-config.production.json  server-config.testing.json
shared/docs/: openrpc.json
shared/domain-go/: README.md  build.sh  calculator.go  calculator.wasm  calculator_core.go  calculator_test.go  go.mod  main.go  test-node.js
(+46 files in other folders)
